deps/v8/test/message/fail/destructuring-modify-const.js
// Copyright 2015 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

//
'use strict';

const { x : x, y : y } = { x : 1, y : 2 };
x++;
