deps/v8/test/message/fail/destructuring-modify-const.out
*%(basename)s:9: TypeError: Assignment to constant variable.
x++;
 ^
TypeError: Assignment to constant variable.
    at *%(basename)s:9:2
